[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Cameron Deering <camdeering@gmail.com>"]
description = ""
name = "covid-bot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
python = "^3.7"
pandas = "^1.0"
plotly = "^4.6"
[tool.poetry.dev-dependencies]
